--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "activationCommands": {
     "atom-workspace": "plone-reload:reload"
   },
-  "repository": "https://github.com/atom/plone-reload",
+  "repository": "https://github.com/bo-duke/plone-reload",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
